# ROBO-DECK

./: README.md  run.py
app/: camera.py  comm_pi_esp.py  main.py  motor_controller.py  sensor_manager.py  speaker.py
config/: settings.yaml
esp32_bridge/: setup.py
esp32_uart_bridge_node/: package.xml  setup.py
esp32_uart_bridge_node/esp32_uart_bridge_node/: esp32_uart_bridge_node.py
install/: local_setup.sh  setup.sh
log/: latest_build
robo_deck/camera_node/: package.xml
robo_deck/camera_node/launch/: camera_node_launch.py
robo_deck/camera_node/resource/: camera_node
robo_deck/esp32_bridge/: package.xml
robo_deck/esp32_bridge/resource/: esp32_bridge
robo_deck/web_interface_node/install/: local_setup.sh
robo_deck/web_interface_node/launch/: web_interface_node_launch.py
robo_deck/web_interface_node/log/: latest_build
sensor_node/: package.xml  setup.py
sensor_node/launch/: sensor_node_launch.py
src/camera_node/: setup.py
src/esp32_bridge/launch/: esp32_bridge_launch.py
src/esp32_uart_bridge_node/: setup.cfg
src/sensor_node/resource/: sensor_node
src/web_interface_node/: CMakeLists.txt  package.xml  setup.py
src/web_interface_node/html/: index.html
src/web_interface_node/install/: setup.bash  setup.ps1  setup.sh
src/web_interface_node/install/web_interface_node/share/web_interface_node/: package.bash  package.sh  package.zsh
src/web_interface_node/launch/: web_interface.launch.py  web_interface_node_launch.py
src/web_interface_node/resource/: web_interface_node
src/web_interface_node/web/: index.html
src/web_interface_node/web_interface_node/: web_sever.py
tests/: test_camera.py  test_comm.py  test_motors.py  test_sensors.py
web/: server.py
web/templates/: index.html
web_interface_node/install/: setup.zsh
web_interface_node/web/: index.html
web_interface_node/web_interface_node/install/: local_setup.sh  setup.sh
web_interface_node/web_interface_node/log/: latest_build
(+8 files in other folders)
