<package format="3">
  <name>web_interface_node</name>
  <version>0.0.0</version>
  <description>Pacote ROS 2 web_interface_node</description>
  <maintainer email="seu_email@exemplo.com">Seu Nome</maintainer>
  <license>MIT</license>
  <buildtool_depend>ament_python</buildtool_depend>
  <exec_depend>rclpy</exec_depend>
</package>
